--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-98338519-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/computer.ico"/>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:100" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/grid.css"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/index.css"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/index-unique.css"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/fixed-button.css"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/navbar.css"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/cover-background.css"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/search.css"/>
-    <!--
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/computer.ico" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:100" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/grid.css" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/index.css" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/index-unique.css" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/fixed-button.css" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/navbar.css" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/cover-background.css" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/search.css" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -31,11 +22,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>A Junior Dev</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <!--
+  <title>Job Portal</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -45,5 +37,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-  </body>
+</body>
+
 </html>
